--- a/CSS/projectstyle.css
+++ b/CSS/projectstyle.css
@@ -254,9 +254,9 @@ h1 {
   cursor: pointer;
   border-radius: 25px;
   font-family: "Great Vibes";
-  transition: all 300ms ease;
+  /* transition: all 300ms ease;
   -webkit-transition: all 300ms ease;
-  -o-transition: all 300ms ease;
+  -o-transition: all 300ms ease; */
 }
 
 .button:hover {
@@ -288,9 +288,9 @@ h1 {
   cursor: pointer;
   border-radius: 25px;
   font-family: "Great Vibes";
-  transition: all 300ms ease;
+  /* transition: all 300ms ease;
   -webkit-transition: all 300ms ease;
-  -o-transition: all 300ms ease;
+  -o-transition: all 300ms ease; */
 }
 
 .button-close:hover {
