--- a/CSS/projectstyle.css
+++ b/CSS/projectstyle.css
@@ -265,11 +265,13 @@ h1 {
   transform: translateY(4px);
   /* border: 1px solid #070707; */
   box-shadow: 0px 2px 2px 0px #000000;
+  border: 1px solid #000000;
 }
 
 .button:active {
   transform: translateY(4px);
   box-shadow: 0px 2px 2px 0px #000000;
+  border: 1px solid #000000;
 }
 
 .button-close {
@@ -301,11 +303,13 @@ h1 {
   transform: translateY(4px);
   /* border: 1px solid #070707; */
   box-shadow: 0px 2px 2px 0px #000000;
+  border: 1px solid #000000;
 }
 
 .button-close:active {
   transform: translateY(4px);
   box-shadow: 0px 2px 2px 0px #000000;
+  border: 1px solid #000000;
 }
 
 .goback {
