--- a/CSS/projectstyle.css
+++ b/CSS/projectstyle.css
@@ -102,25 +102,21 @@ a {
 }
 
 .bullhead {
-  margin-top: 5px;
-  width: 40px;
-  height: 40px;
+  width: 45px;
+  height: 45px;
 }
 
 .hamburger {
   height: 40px;
-  margin-bottom: 5px;
+  margin-bottom: 30px;
   display: none;
   cursor: pointer;
 }
 
 .bar {
   display: block;
-  width: 25px;
-  height: 3px;
   margin: 5px 0px;
-  transition: all 0.1s ease-in-out;
-  background-color: #cb4a0a;
+  transition: all 0.8s ease;
 }
 
 @media (max-width: 1600px) {
@@ -134,16 +130,47 @@ a {
     display: block;
   }
 
+  /* .bar:nth-child(1) {
+    width: 35px;
+    margin-left: 5px;
+  }
+
+  .bar:nth-child(2) {
+    width: 45px;
+  }
+
+  .bar:nth-child(3) {
+    width: 35px;
+    margin-left: 5px;
+  } */
+
   .hamburger.active .bar:nth-child(2) {
-    opacity: 0;
+    background-color: #7f8fa6;
+    transform: rotate(495deg) translate(-8px);
+    transition: all 0.8s;
+    width: 35px;
   }
 
   .hamburger.active .bar:nth-child(1) {
-    transform: translateY(8px) rotate(45deg);
+    background-color: #7f8fa6;
+    transform: rotate(45deg) translate(10px);
+    transition: all 0.8s;
+    width: 35px;
   }
 
   .hamburger.active .bar:nth-child(3) {
-    transform: translateY(-8px) rotate(-45deg);
+    background-color: #7f8fa6;
+    transform: rotate(45deg);
+    transition: all 0.8s;
+    opacity: 0;
+  }
+
+  .hamburger span {
+    width: 45px;
+    height: 8px;
+    /* margin-bottom: 10px; */
+    background: #7f8fa6;
+    border-radius: 4px;
   }
 
   .nav-menu {
@@ -155,7 +182,7 @@ a {
     flex-direction: column;
     background-color: rgba(1, 4, 12, 0.948);
     text-align: center;
-    transition: all 0.1s ease-in-out;
+    transition: all 0.5s ease-in-out;
   }
 
   .nav-item {
@@ -175,7 +202,7 @@ a {
 }
 
 #preloader {
-  background: #000000 url(/loading/preloader.gif) no-repeat center;
+  background: #000000 url(/loading/preloader4.gif) no-repeat center;
   background-size: 120px;
   height: 100vh;
   width: 100%;
